css: fix alignment on ghost posts

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -3528,6 +3528,11 @@ small, .small {
 .post-meta::-webkit-scrollbar {
 	display: none;
 }
+
+.ghost-post .post-meta {
+	height: 30px;
+}
+
 .sub-flair {
 	padding: 3px 5px 2px 5px;
 	border-radius: 5px;
